--- a/src/app/parent/parent.component.html
+++ b/src/app/parent/parent.component.html
@@ -2,10 +2,24 @@
     <app-child>
         <h3>Some Heading</h3>
         <p #para>
+           First Para
            Paragrph content Paragrph content Paragrph content Paragrph content 
            Paragrph content Paragrph content Paragrph content Paragrph content 
         </p>
-        <app-test></app-test>
+        <p #para>
+            Second Para
+            Paragrph content Paragrph content Paragrph content Paragrph content 
+            Paragrph content Paragrph content Paragrph content Paragrph content 
+        </p>
+        <p #para>
+            Third Para
+            Paragrph content Paragrph content Paragrph content Paragrph content 
+            Paragrph content Paragrph content Paragrph content Paragrph content 
+        </p>
+        <app-test [name]="'Kannan'"></app-test>
+        <app-test [name]="'Ambu'"></app-test>
+        <app-test [name]="'Aswin'"></app-test>
+        <app-test [name]="'Achu'"></app-test>
     </app-child>
     <!-- <button (click)="showParentVal()">Show Value Parent ViewTemp</button> -->
 </div>
